# Pro-BOTno

./: .gitignore  IMPLEMENTATION_SUMMARY.md  LICENSE  PORTAL_README.md  PROJECT_COMPLETE.md  QUICKSTART.md  README.md  README_PORTAL.md  START_HERE.md  VISUAL_GUIDE.md  analyze  check_setup.py  pyproject.toml  run_portal.sh  test_pipeline.sh
docs/: FEDLEX_MODULE.md
src/: app.py  portal.py  pyproject.toml  refugee_case_analyzer.py  requirements.txt
src/backend/: __init__.py  case_processor.py  pdf_generator.py
src/modules/: enhanced_rag.py  fedlex_client.py
src/pages/: 1_📝_New_Case_Intake.py  2_📊_Case_Reports.py
src/prompts/: fedlex_prompts.py
